--- a/App/templates/world/members.html
+++ b/App/templates/world/members.html
@@ -4,8 +4,8 @@
 		<h2 class="mb-0 text-black lh-100">{{ lang["ihmem"] }}</h2>
 {% for org in organizations %}
 		<div class="my-3 p-3 bg-white rounded box-shadow">
-			<h6 class="border-bottom border-gray pb-2 mb-0">{{org[0]}}</h6>
-			
+			<h6 class="border-bottom border-gray pb-2 mb-0">{{org[0].head}}</h6>
+
 {% for member in org[1] %}
 			<div class="media text-muted pt-3">
 				<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
