--- a/App/templates/world/home.html
+++ b/App/templates/world/home.html
@@ -8,21 +8,19 @@
 				{{lang["ihstud"]}}
 			</h2><br>
 {% for post in lang["icstud"] %}
-
 			<div class="blog-post">
 				<h3 class="blog-post-title">{{post[0]}}</h3>
 					{{post[1]|safe}}
 			</div><hr>
-			<small><p class="blog-post-meta">Added: {{post[2].strftime("%d-%m-%Y  %H:%M") }}</p></small>
+			<small><p class="blog-post-meta">Added: {{post[2] }}</p></small>
 {% endfor %}
-
-
+<!--
 			<nav class="blog-pagination">
 				<a class="btn btn-outline-primary" href="#">Older</a>
 				<a class="btn btn-outline-secondary disabled" href="#">Newer</a>
 			</nav>
-
-		</div><!-- /.blog-main -->
-	</div><!-- /.row -->
-</main><!-- /.container -->
+-->
+		</div>
+	</div>
+</main>
 {% endblock %}
