--- a/App/templates/dashboard/edit/home.html
+++ b/App/templates/dashboard/edit/home.html
@@ -13,12 +13,20 @@
 	<hr class="my-4">
 	<form method="post">
 		<div class="form-group">
-			<label for="title">Title</label>
-			<textarea class="form-control" id="title" rows="1" name="title" >{{title}}</textarea>
+			<label for="title">Title ENG</label>
+			<textarea class="form-control" id="title" rows="1" name="headen" >{{edited.head_en}}</textarea>
 		</div>
 		<div class="form-group">
-			<label for="body">Body</label>
-			<textarea class="form-control" id="body" rows="20" name="body">{{body}}</textarea>
+			<label for="title">Title PL</label>
+			<textarea class="form-control" id="title" rows="1" name="headpl" >{{edited.head_pl}}</textarea>
+		</div>
+		<div class="form-group">
+			<label for="body">Body ENG</label>
+			<textarea class="form-control" id="body" rows="20" name="bodyen">{{edited.body_en}}</textarea>
+		</div>
+		<div class="form-group">
+			<label for="body">Body PL</label>
+			<textarea class="form-control" id="body" rows="20" name="bodypl">{{edited.body_pl}}</textarea>
 		</div>
 		<button type="submit" class="btn btn-primary">Publish</button>
 	</form>
@@ -30,7 +38,7 @@
 		<div class="card-header" id="headingTwo">
 			<h5 class="mb-0">
 				<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#post{{post.id}}" aria-expanded="false" aria-controls="collapseTwo">
-					{{post.head}}
+					{{post.head_en}}|{{post.head_pl}}
 				</button>
 				<a type="button" class="btn btn-outline-danger btn-sm float-right" href="/dashboard/edit/home/delete/{{post.id}}" role="button">Delete</a>
 				<a type="button" class="btn btn-outline-info btn-sm float-right" href="/dashboard/edit/home/{{post.id}}" role="button">Edit</a>
@@ -38,7 +46,8 @@
 		</div>
 		<div id="post{{post.id}}" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
 			<div class="card-body">
-				{{post.body}}
+				{{post.body_en}}<br>
+				{{post.body_pl}}
 			</div>
 		</div>
 	</div>
