--- a/App/templates/dashboard/edit/experiment.html
+++ b/App/templates/dashboard/edit/experiment.html
@@ -13,18 +13,10 @@
 	<hr class="my-4">
 	<form method="post">
 		<div class="form-group">
-			<label for="title">Title</label>
-			<textarea class="form-control" id="title" rows="1" name="title" >{{title}}</textarea>
-			<label for="title">Language</label>
-			<textarea class="form-control" id="title" rows="1" name="lang" >{{lang}}</textarea>
-			<label for="title">Localization</label>
-			<textarea class="form-control" id="title" rows="1" name="loc" >{{loc}}</textarea>
-						<label for="title">Description</label>
-			<textarea class="form-control" id="title" rows="1" name="desc" >{{desc}}</textarea>
-		</div>
-		<div class="form-group">
-			<label for="body">Body</label>
-			<textarea class="form-control" id="body" rows="15" name="body">{{body}}</textarea>
+			<label for="body">Body ENG</label>
+			<textarea class="form-control" id="body" rows="15" name="bodyen">{{edited.body_en}}</textarea>
+			<label for="body">Body PL</label>
+			<textarea class="form-control" id="body" rows="15" name="bodypl">{{edited.body_pl}}</textarea>
 		</div>
 		<button type="submit" class="btn btn-primary">Publish</button>
 	</form>
@@ -36,7 +28,7 @@
 		<div class="card-header" id="headingTwo">
 			<h5 class="mb-0">
 				<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#post{{post.id}}" aria-expanded="false" aria-controls="collapseTwo">
-					{{post.head}}
+					{{post.timestamp.strftime("%d-%m-%Y  %H:%M")}}
 				</button>
 				<a type="button" class="btn btn-outline-danger btn-sm float-right" href="/dashboard/edit/experment/delete/{{post.id}}" role="button">Delete</a>
 				<a type="button" class="btn btn-outline-info btn-sm float-right" href="/dashboard/edit/experiment/{{post.id}}" role="button">Edit</a>
