--- a/App/templates/world/experiments.html
+++ b/App/templates/world/experiments.html
@@ -3215,27 +3215,28 @@
 	<div class="row">
 		<div class="col">
 			<div class="container marketing">
+				<!--
 				<div class="row">
 					<div class="col-lg-4">
 						<img class="rounded-circle" src="https://cdn.mageplaza.com/media/general/SahXiUd.jpg" alt="Generic placeholder image" width="140" height="140">
 						<h2>Research</h2>
 						<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 						<p><a class="btn btn-secondary" href="#" role="button">{{ lang["viewd"] }}</a></p>
-					</div><!-- /.col-lg-4 -->
+					</div>
 					<div class="col-lg-4">
 						<img class="rounded-circle" src="https://cdn.mageplaza.com/media/general/SahXiUd.jpg" alt="Generic placeholder image" width="140" height="140">
 						<h2>BINA detector</h2>
 						<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 						<p><a class="btn btn-secondary" href="#" role="button">{{ lang["viewd"] }}</a></p>
-					</div><!-- /.col-lg-4 -->
+					</div>
 					<div class="col-lg-4">
 						<img class="rounded-circle" src="https://cdn.mageplaza.com/media/general/SahXiUd.jpg" alt="Generic placeholder image" width="140" height="140">
 						<h2>Experiments</h2>
 						<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
 						<p><a class="btn btn-secondary" href="#" role="button">{{ lang["viewd"] }}</a></p>
-					</div><!-- /.col-lg-4 -->
-				</div><!-- /.row -->
-
+					</div>
+				</div>
+-->
 
 
 
