--- a/App/templates/world/experiments.html
+++ b/App/templates/world/experiments.html
@@ -3237,16 +3237,11 @@
 					</div>
 				</div>
 -->
-
-
-
-
 				<hr class="featurette-divider">
 
 						{{ lang["icexp"]|safe }}
 
-
-			</div><!-- /.container -->
+			</div>
 
 			<footer class="container" style="margin-bottom:10px">
 						<p class="float-right"> <a href="#">{{ lang["up"] }}</a></p>
