--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -33,19 +33,19 @@
 			<ul class="navbar-nav ml-auto ">
 
 				<li class="nav-item active">
-					<a class="nav-link" href="/experiments">{{ lang["ihexp"] }}<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="{{ lang["domain"] }}/{{ lang["lang"] }}/experiments">{{ lang["ihexp"] }}<span class="sr-only">(current)</span></a>
 				</li>
 
 				<li class="nav-item">
-					<a class="nav-link" href="/publications">{{ lang["ihpub"] }}</a>
+					<a class="nav-link" href="{{ lang["domain"] }}/{{ lang["lang"] }}/publications">{{ lang["ihpub"] }}</a>
 				</li>
 
 				<li class="nav-item">
-					<a class="nav-link" href="/members">{{ lang["ihmem"] }}</a>
+					<a class="nav-link" href="{{ lang["domain"] }}/{{ lang["lang"] }}/members">{{ lang["ihmem"] }}</a>
 				</li>
 
 				<li class="nav-item">
-					<a class="nav-link" href="/students">{{ lang["ihstud"] }}</a>
+					<a class="nav-link" href="{{ lang["domain"] }}/{{ lang["lang"] }}/students">{{ lang["ihstud"] }}</a>
 				</li>
 
 				<li class="nav-item">
@@ -53,27 +53,27 @@
 				</li>
 				{% if admin %}
 				<li class="nav-item active">
-					<a class="nav-link" href="/dashboard/papers/publications">{{ lang["ihdash"] }}</a>
+					<a class="nav-link" href="https://fenu-experiment.pl/dashboard/papers/publications">{{ lang["ihdash"] }}</a>
 				</li>
 				{% endif %}
 			</ul>
 
 			<ul class="navbar-nav flex-row ml-md-auto  d-md-flex">
-				
+
 				<li class="nav-item">
 					<a class="nav-link active" href="/lang/en">ENG</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/lang/pl">PL</a> 
+					<a class="nav-link" href="/lang/pl">PL</a>
 				</li>
-				
+
 				<li class="nav-item">
 					{% if guest %}
 					<a class="btn btn-primary" href="/login" role="button"> Log in </a>
-					{% endif %}	
+					{% endif %}
 					{% if login %}
 					<a class="btn btn-primary" href="/logout" role="button"> Log out </a>
-					{% endif %}	
+					{% endif %}
 				</li>
 
 			</ul>
@@ -123,7 +123,7 @@
 
 	<nav class="navbar sticky-bottom navbar-light bg-white">
 		<small><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">  <img src="https://img.shields.io/github/v/tag/aszadzinski/BINA-CCB.svg" class="figure-img img-fluid rounded" alt="badge-tag"> <img src="https://img.shields.io/github/last-commit/aszadzinski/BINA-CCB.svg" class="figure-img img-fluid rounded" alt="badge-last vommit"></a></small>
-		<ul class="navbar-nav  flex-row ml-md-auto d-none d-md-flex">	
+		<ul class="navbar-nav  flex-row ml-md-auto d-none d-md-flex">
 		<li class="nav-item">
 			<a class="nav-link" href="https://github.com/aszadzinski/BINA-CCB.git"><i class="fa fa-github"></i> GitHub</a>
 		</li>
@@ -131,7 +131,7 @@
 			<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">© 2020 BINA@CCB</a>
 		</li>
 	</nav>
-	
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/<version tag>/showdown.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
