--- a/App/templates/dashboard/edit/experiment.html
+++ b/App/templates/dashboard/edit/experiment.html
@@ -13,10 +13,15 @@
 	<hr class="my-4">
 	<form method="post">
 		<div class="form-group">
+
 			<label for="body">Body ENG</label>
-			<textarea class="form-control" id="body" rows="15" name="bodyen">{{edited.body_en}}</textarea>
+				<textarea class="form-control" id="body" rows="15" name="bodyen">
+					{{edited.body_en}}
+				</textarea>
 			<label for="body">Body PL</label>
-			<textarea class="form-control" id="body" rows="15" name="bodypl">{{edited.body_pl}}</textarea>
+				<textarea class="form-control" id="body" rows="15" name="bodypl">
+					{{edited.body_pl}}
+				</textarea>
 		</div>
 		<button type="submit" class="btn btn-primary">Publish</button>
 	</form>
