--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="{{lang["lang"]}}">
 <head>
 	<meta charset="utf-8">
 	<meta name="author" content="Albert Szadziński">
@@ -16,7 +16,7 @@
 	LatexIT.add('p',true);
 	</script>
 
-    <link rel='stylesheet' type='text/css' href='http://www.x3dom.org/x3dom/release/x3dom.css'></link>
+    <link rel='stylesheet' type='text/css' href='http://www.x3dom.org/x3dom/release/x3dom.css'>
     <script type='text/javascript' src='http://www.x3dom.org/x3dom/release/x3dom.js'></script>
 
 	<title>BINA</title>
@@ -32,7 +32,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto ">
 
-				<li class="nav-item active">
+				<li class="nav-item">
 					<a class="nav-link" href="{{ lang["domain"] }}/{{ lang["lang"] }}/experiments.html">{{ lang["ihexp"] }}<span class="sr-only">(current)</span></a>
 				</li>
 
@@ -56,7 +56,7 @@
 			<ul class="navbar-nav flex-row ml-md-auto  d-md-flex">
 
 				<li class="nav-item">
-					<a class="nav-link active" href="{{ lang["domain"] }}/en/experiments.html">EN</a>
+					<a class="nav-link active" href="{{ lang["domain"] }}/en/experiments.html">EN/</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link active" href="{{ lang["domain"] }}/pl/experiments.html">PL</a>
