--- a/App/templates/dashboard/files/gallery.html
+++ b/App/templates/dashboard/files/gallery.html
@@ -1,25 +1,55 @@
 {% extends "dashboard/files.html" %}
 {% block dashboard_files %}
-<table class="table table-striped" align="left">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Title</th>
-      <th scope="col"></th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-{% for group in collection %}
-    <tr>
-      <th scope="row">{{group.id}}</th>
-      <td>{{group.filename}}</td>
-      <td><a role="button" class="btn btn-outline-success" href="/dashboard/gallery/download/{{folder}}/{{group.id}}">Show</a></td>
-      <th ><img  class="img-thumbnail" src="{{url_for('static', filename=group.path)}}"  style=" width: 120px; height: 80px;"></th>
-    </tr>
+<div class="container" align=left>
+
+			<div class="btn-group" role="group" aria-label="First group">
+				<button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#modnew">Add photos</button>
+			</div>
+
+{% for type in types %}
+	<div class="row">
+		<div class="col">
+			<a class="nav-link active text-dark " href="/dashboard/gallery/{{type}}">
+			<i class="fa fa-folder-open-o" style="font-size:30px;color:red"></i>
+			<small><b>{{type}}</b></small>
+			</a>
+			<hr>
+		</div>
+	</div>
 {% endfor %}
-  </tbody>
-</table>
+</div>
+
+
+<div class="modal fade" id="modnew" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLabel">New Photos</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<form class="was-validated" method="post" enctype="multipart/form-data">
+					<input type="hidden" name="form-name" value="add">
+          <div class="form-group">
+            <label>Folder</label>
+            <select class="form-control" multiple name="folder">
+            {% for type in types %}
+              <option value="{{ type }}">{{type}}</option>
+            {% endfor %}
+            </select>
+          </div>
+          <div class="form-group">
+                <span>Upload one or more files</span>
+                <input type="file" multiple name="images">
+          </div>
+					<hr>
+					<button type="submit" class="btn btn-primary">Add</button>
+				</form>
+			</div>
+		</div>
+	 </div>
+</div>
+
 {% endblock %}
-
-
