--- a/App/templates/dashboard/files/presentations.html
+++ b/App/templates/dashboard/files/presentations.html
@@ -5,7 +5,7 @@
 		<div class="btn-toolbar justify-content-between" role="toolbar" aria-label="Toolbar with button groups">
 			<div class="btn-group" role="group" aria-label="First group">
 				<button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#modnew">Send file</button>
-				
+
 			</div>
 			<div >
 				<form  method="post", enctype="multipart/form-data">
@@ -20,7 +20,7 @@
 
 						<input type="text" class="form-control" placeholder="Author" name="author" value="">
 						<input type="text" class="form-control" placeholder="Title" name="title" value="">
-						 
+
 						<button type="submit" class="btn btn-secondary">Search</button>
 					</div>
 				</form>
@@ -51,6 +51,7 @@
 									<hr>
 								</div>
 								<div class="col" align="right">
+										<a  type="button" href="/dashboard/edit/presentation/{{content.id}}" class="btn btn-outline-primary btn-sm"><i class="fa fa-edit" style="font-size:15px;color:blue"></i></a>
 										<a  type="button" href="/dashboard/delete/presentation/{{content.id}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash" style="font-size:15px;color:red"></i></a>
 								</div>
 							</div>
@@ -98,23 +99,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="form-row">
-						<div class="form-group col-md-6">
-							<div class="form-group">
-								<label>Group</label>
-								<select class="custom-select is-invalid" id="validationServer04" name="group" required>
-									<option selected disabled value="">Choose</option>
-									<option value="new">Set new group---></option>
-									{% for tag in tags %}
-									<option value="{{tag.name}}">{{tag.name}}</option>
-									{% endfor %}
-								</select>
-							</div>
-						</div>
-						<div class="form-group col-md-6">
-							<label>New group</label>
-							<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" placeholder="new group name" name="ngroup">
-						</div>
+					<div class="form-group">
+						<label>Event</label>
+						<select class="custom-select is-invalid" id="validationServer04" name="event" required>
+							{% for event in events %}
+							<option value="{{event.id}}">{{event.title}}@{{event.localization}} {{ event.time.strftime("%d-%m-%Y") }}</option>
+							{% endfor %}
+						</select>
 					</div>
 					<div class="form-group">
 						<label>Description</label>
