--- a/App/templates/dashboard/files.html
+++ b/App/templates/dashboard/files.html
@@ -13,6 +13,7 @@
 					<a class="dropdown-item" href="/dashboard/papers/publications">Publications</a>
 					<a class="dropdown-item" href="/dashboard/papers/thesis">Thesis</a>
 					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="/dashboard/papers/documentation">Documentation</a>
 					<a class="dropdown-item" href="/dashboard/papers/manuals">Manuals</a>
 					<a class="dropdown-item" href="/dashboard/papers/logbooks">LogBooks</a>
 				</div>
