--- a/App/templates/dashboard/files/gallery.html
+++ b/App/templates/dashboard/files/gallery.html
@@ -34,11 +34,11 @@
 					<input type="hidden" name="form-name" value="add">
           <div class="form-group">
             <label>Folder</label>
-            <select class="form-control" multiple name="folder">
+						<select class="custom-select is-invalid" id="validationServer04" name="folder" required>
             {% for type in types %}
               <option value="{{ type }}">{{type}}</option>
             {% endfor %}
-            </select>
+						</select>
           </div>
           <div class="form-group">
                 <span>Upload one or more files</span>
