--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="{{lang["lang"]}}">
 <head>
 	<meta charset="utf-8">
-	<meta name="author" content="Albert Szadziński">
+	<meta name="author" content="{{ lang["author"] }}">
 	<meta name="description" content="BINA experiment page">
 	<meta name="keywords" content="BINA, BINA detector, 3nf, space star, CCB, bronowice, nuclear forces, UŚ, UJ, IFJ PAN, experiments, 3-nucleon forces, breakup, elastic scattering">
 
@@ -63,7 +63,7 @@
 				</li>
 
 				<li class="nav-item">
-					<a class="btn btn-primary" role="button" href="https://fenu-experiment.pl/login">{{ lang["ihdash"] }}</a>
+					<a class="btn btn-primary" role="button" href="{{ lang["internal"] }}">{{ lang["ihdash"] }}</a>
 				</li>
 
 			</ul>
@@ -133,7 +133,7 @@
 	</ul>
 	<ul class="nav navbar-nav navbar-center">
 		<li class="nav-item">
-			<a class="nav-link" href="https://github.com/aszadzinski/BINA-CCB.git"><i class="fa fa-github"></i> GitHub<font color="gray">©2020 BINA@CCB</font></a>
+			<a class="nav-link" href="{{ lang["repo"] }}"><i class="fa fa-github"></i> GitHub<font color="gray">©2020 BINA@CCB</font></a>
 		</li>
 	</ul>
 	<ul class="nav navbar-nav navbar-center">
