--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -23,7 +23,7 @@
 				<div class="collapse navbar-collapse ">
 					<ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
 						<li class="nav-item">
-							<a class="nav-link pl-0 text-nowrap" href="{{ lang["domain"] }}"><h5><i class="fa fa-home fa-fw"></i> <span class="font-weight-bold">Fenu-Exp</h5></span></a>
+							<a class="nav-link pl-0 text-nowrap" href="{{ lang["domain"] }}"><h5><i class="fa fa-mail-reply"></i> <span class="font-weight-bold">Back</h5></span></a>
 						</li>
 <div class="dropdown">
   <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-id-card"></i> <span class="d-none d-md-inline"><small>Page Settings</small> </span></a>
