--- a/App/templates/dashboard/files.html
+++ b/App/templates/dashboard/files.html
@@ -11,7 +11,7 @@
 				<a class="nav-link  dropdown-toggle" id="navbarDropdown" data-toggle="dropdown"   href="#">Papers</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 					<a class="dropdown-item" href="/dashboard/papers/publications">Publications</a>
-					<a class="dropdown-item" href="/dashboard/papers/thesis">Thesis</a>
+					<a class="dropdown-item" href="/dashboard/papers/thesis">Theses</a>
 					<div class="dropdown-divider"></div>
 					<a class="dropdown-item" href="/dashboard/papers/documentation">Documentation</a>
 					<a class="dropdown-item" href="/dashboard/papers/manuals">Manuals</a>
