Added: wiki & forum init

--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -71,19 +71,12 @@
 						<li class="nav-item">
 							<a class="nav-link pl-0" href="/dashboard/git"><i class="fa fa-cogs"></i> <span class="d-none d-md-inline">Software</span></a>
 						</li>
-
-
-						<div class="dropdown ">
-							 <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-puzzle-piece"></i> <span class="d-none d-md-inline">BETA</span></a>
-							<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-								<li class="nav-item">
-									<a class="dropdown-item" href="/dashboard/notes"><i class="fa fa-sticky-note"></i> <span class="d-none d-md-inline">Notes</span></a>
-								</li>
-								<li class="nav-item">
-									<a class="dropdown-item" href="/dashboard/kanban"><i class="fa fa-pie-chart"></i> <span class="d-none d-md-inline">Projects</span></a>
-								</li>
-							</div>
-						</div>
+						<li class="nav-item">
+							<a class="nav-link pl-0" href="/dashboard/forum"><i class="fa fa-bank"></i> <span class="d-none d-md-inline">Forum</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link pl-0" href="/dashboard/wiki"><i class="fa fa-graduation-cap"></i> <span class="d-none d-md-inline">Wiki</span></a>
+						</li>
 
                     </ul>
                 </div>
